# eth-date

./: .env.sample  .gitignore  LOCATION_FEATURES.md  MOPRO_IMPLEMENTATION.md  NFC_USAGE.md  NGROK_SETUP.md  WORLD_ID_SETUP.md  next.config.mjs  ngrok.yml  package-lock.json  package.json  pnpm-lock.yaml  setup-world-id.md
app/: globals.css  layout.js  layout.tsx  page.js
app/api/verify/: route-real.js  route.js
app/api/worldid/check/: route.js
app/components/: LocationTracker.js  MoproDemo.js  NFCScanner.js
app/hooks/: useLocation.js  useMopro.js  useNFC.js
app/nfc-detection/: layout.js  page.js
app/nfc-scan/: layout.js  page.js
app/utils/: nfc.js
components/: explore-canvas.jsx  gender-selection.jsx  leaderboard.jsx  nfc-scanner.jsx  verification-example.jsx  world-verification.jsx
components/ui/: button.jsx
hooks/: use-location.js  use-nfc.js  use-websocket.js  use-world-verification-real.js  use-world-verification.js
lib/: api.js  nfc.js
mopro-wasm-lib/: Cargo.toml
mopro-wasm-lib/src/: lib.rs
scripts/: setup-real-world-id.js  setup-world-id.js  start-ngrok.bat  start-ngrok.sh
src/app/: layout.tsx
src/auth/: index.ts
src/providers/: index.tsx
