[package]
name = "mopro-wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Example circuit implementation - replace with your actual circuit
# my-halo2-circuit = { git = "http://github.com/users/my-halo2-circuit.git" }

# For now, we'll use a basic example without complex circuit dependencies
# halo2_proofs = "0.3"
# halo2_gadgets = "0.3"
ff = "0.13"
group = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
wasm-bindgen-console-logger = "0.1.1"
wasm-bindgen-futures = "0.4.47"
wasm-bindgen-rayon = { version = "1.2.2", features = [
    "no-bundler",
], optional = true }
wasm-bindgen-test = "0.3.42"
